--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : https://www.linkedin.com/in/reachamv/ # Your LinkedIn username
+  linkedin         : reachamv # Your LinkedIn username
   mastodon         :
   medium           :
   pinterest        :
