--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,9 +1,9 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "https://name.com"
-  email       : "name@name.com"
+  name        : "Anis M. Vengasseri"
+  uri         : "https://anismhd.github.io/"
+  email       : "anis.mhd@gmail.com"
   bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
